--- a/templates/emails/rappel.html.twig
+++ b/templates/emails/rappel.html.twig
@@ -50,7 +50,7 @@
         <ul>
             <li>Virement bancaire : <strong>IBAN :</strong> {{ iban }}, <strong>BIC :</strong> {{ bic }}</li>
             <li>Carte de crédit via notre portail sécurisé : <a href="https://www.guestcare.com/payment">https://www.guestcare.com/payment</a></li>
-            <li>Chèque à l'ordre de Guest Care, envoyé à l'adresse suivante : {{ adresse_postale }}</li>
+            <li>Chèque à l'ordre de Guest Care, envoyé à l'adresse suivante : Adresse postale</li>
         </ul>
         <p>
             Si vous avez déjà effectué le paiement, veuillez ignorer ce message. Pour toute question ou assistance, n'hésitez pas à nous contacter à l'adresse suivante : <a href="mailto:support@guestcare.com">support@guestcare.com</a>.
